--- a/PhotoPicker/build.gradle
+++ b/PhotoPicker/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 android {
   compileSdkVersion 28
   resourcePrefix "__picker_"
-
+  buildToolsVersion "28.0.3"
   dexOptions {
     javaMaxHeapSize "4g"
   }
